--- a/LoLApp/src/main/res/values/styles.xml
+++ b/LoLApp/src/main/res/values/styles.xml
@@ -5,4 +5,10 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!-- Base application theme. -->
+    <style name="DialogChampionDetails">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#000000</item>>
+    </style>
+
 </resources>
