Working on service.  Getting intents worked out for RPCs

--- a/LoLApp/src/main/res/layout/activity_login.xml
+++ b/LoLApp/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
                 android:orientation="vertical">
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/et_user"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/et_create_user"
@@ -41,7 +41,7 @@
                     android:singleLine="true"/>
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
