--- a/LoLApp/src/main/res/layout/activity_create_user.xml
+++ b/LoLApp/src/main/res/layout/activity_create_user.xml
@@ -30,18 +30,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <AutoCompleteTextView
-                    android:id="@+id/user"
+                <EditText
+                    android:id="@+id/et_user"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/et_create_user"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textAutoComplete"
                     android:maxLines="1"
                     android:singleLine="true"/>
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
@@ -50,7 +48,7 @@
                     android:singleLine="true"/>
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
