--- a/LoLApp/src/main/res/layout/activity_main.xml
+++ b/LoLApp/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
-<DrawerLayout
+<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -17,4 +18,4 @@
         android:layout_gravity="start"
         android:name="com.stanford.lolapp.fragments.NavigationDrawerFragment" />
 
-</DrawerLayout>
+</android.support.v4.widget.DrawerLayout>
