--- a/LoLApp/src/main/res/menu/main.xml
+++ b/LoLApp/src/main/res/menu/main.xml
@@ -1,11 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.stanford.lolapp.com.stanford.lolapp.activities.MainActivity" >
-    <item android:id="@+id/action_example"
-        android:title="@string/action_example"
+    <item android:id="@+id/action_timers"
+        android:title="@string/action_timers"
         android:showAsAction="withText|ifRoom" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
+        android:showAsAction="never" />
+    <item android:id="@+id/action_logout"
+        android:title="@string/action_logout"
+        android:orderInCategory="200"
         android:showAsAction="never" />
 </menu>
