--- a/LoLApp/src/main/res/layout/activity_login.xml
+++ b/LoLApp/src/main/res/layout/activity_login.xml
@@ -14,10 +14,11 @@
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:layout_gravity="center" />
 
     <ScrollView
         android:id="@+id/login_form"
